--- a/wp-content/themes/test-task-zero/style.css
+++ b/wp-content/themes/test-task-zero/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: Test Task Zero
 Theme URI: http://underscores.me/
-Author: Underscores.me
+Author: Igor Kondratuk
 Author URI: http://underscores.me/
-Description: Description
+Description: Test Task
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
